добавил в ссылки меню /techno-style/

--- a/src/assets/components/main-menu.html
+++ b/src/assets/components/main-menu.html
@@ -4,22 +4,26 @@
     <nav class="main__nav">
       <ul class="nav__list">
         <li class="nav__item">
-          <a href="/" class="nav__link nav__link--active">ГЛАВНАЯ</a>
+          <a href="/techno-style/" class="nav__link nav__link--active"
+            >ГЛАВНАЯ</a
+          >
         </li>
         <li class="nav__item">
-          <a href="/about/" class="nav__link">О КОМПАНИИ</a>
+          <a href="/techno-style/about/" class="nav__link">О КОМПАНИИ</a>
         </li>
         <li class="nav__item">
-          <a href="/equipment/" class="nav__link">ОБОРУДОВАНИЕ</a>
+          <a href="/techno-style/equipment/" class="nav__link">ОБОРУДОВАНИЕ</a>
         </li>
         <li class="nav__item">
-          <a href="/analogs/" class="nav__link">АНАЛОГИ И ЗАМЕНА</a>
+          <a href="/techno-style/analogs/" class="nav__link"
+            >АНАЛОГИ И ЗАМЕНА</a
+          >
         </li>
         <li class="nav__item">
-          <a href="/partners/" class="nav__link">ПАРТНЕРЫ</a>
+          <a href="/techno-style/partners/" class="nav__link">ПАРТНЕРЫ</a>
         </li>
         <li class="nav__item">
-          <a href="/contacts/" class="nav__link">КОНТАКТЫ</a>
+          <a href="/techno-style/contacts/" class="nav__link">КОНТАКТЫ</a>
         </li>
       </ul>
     </nav>
