--- a/src/assets/components/footer.html
+++ b/src/assets/components/footer.html
@@ -21,19 +21,29 @@
           <h3 class="footer__title">КОМПАНИЯ</h3>
           <ul class="footer__nav">
             <li>
-              <a href="/about/" class="footer__nav-link">О компании</a>
+              <a href="/techno-style/about/" class="footer__nav-link"
+                >О компании</a
+              >
             </li>
             <li>
-              <a href="/equipment/" class="footer__nav-link">Оборудование</a>
+              <a href="/techno-style/equipment/" class="footer__nav-link"
+                >Оборудование</a
+              >
             </li>
             <li>
-              <a href="/analogs/" class="footer__nav-link">Аналоги и замена</a>
+              <a href="/techno-style/analogs/" class="footer__nav-link"
+                >Аналоги и замена</a
+              >
             </li>
             <li>
-              <a href="/partners/" class="footer__nav-link">Партнеры</a>
+              <a href="/techno-style/partners/" class="footer__nav-link"
+                >Партнеры</a
+              >
             </li>
             <li>
-              <a href="/contacts/" class="footer__nav-link">Контакты</a>
+              <a href="/techno-style/contacts/" class="footer__nav-link"
+                >Контакты</a
+              >
             </li>
           </ul>
         </div>
